<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/lamp_bg">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quest_title"
            android:textSize="18dp"
            android:fontFamily="@font/inter_ui_regular"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center_horizontal|center_vertical"/>

    </LinearLayout>

    <!--  <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:background="@android:color/transparent"
          android:orientation="vertical"> -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:orientation="vertical">

            <!-- Question 1 -->
            <TextView
                android:textColor="#fff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22dp"
                android:fontFamily="sans-serif"
                android:textStyle="italic"
                android:layout_margin="10dp"
                android:text="@string/name"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:background="#fff"
                android:layout_margin="5dp"/>

            <!-- Question 2 -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textSize="22dp"
                android:textColor="#fff"
                android:fontFamily="sans-serif"
                android:textStyle="italic"
                android:layout_margin="10dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:background="#fff"
                android:layout_margin="5dp"/>

            <!-- Question 3 -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lamp_on"
                android:textSize="22dp"
                android:textColor="#fff"
                android:fontFamily="sans-serif"
                android:textStyle="italic"
                android:layout_margin="10dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:background="#fff"
                android:layout_margin="5dp"/>

            <!-- Question 4 -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lamp_off"
                android:textSize="22dp"
                android:textColor="#fff"
                android:fontFamily="sans-serif"
                android:textStyle="italic"
                android:layout_margin="10dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:background="#fff"
                android:layout_margin="5dp"/>

            <!-- Question 5 -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/brightness"
                android:textSize="22dp"
                android:textColor="#fff"
                android:fontFamily="sans-serif"
                android:textStyle="italic"
                android:layout_margin="10dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:background="#fff"
                android:layout_margin="5dp"/>


            <!-- Question 6 -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/name_developer"
                android:textSize="22dp"
                android:textColor="#fff"
                android:fontFamily="sans-serif"
                android:textStyle="italic"
                android:layout_margin="10dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:layout_margin="5dp"
                android:background="#fff" />

            <!-- Question 7 -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/sleep"
                android:textSize="22dp"
                android:textColor="#fff"
                android:fontFamily="sans-serif"
                android:textStyle="italic"
                android:layout_margin="10dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:layout_margin="5dp"
                android:background="#fff" />

            <!-- Question 8 -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/hero"
                android:textSize="22dp"
                android:textColor="#fff"
                android:fontFamily="sans-serif"
                android:textStyle="italic"
                android:layout_margin="10dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:layout_margin="5dp"
                android:background="#fff" />

            <!-- Question 9 -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/life_story"
                android:textSize="22dp"
                android:textColor="#fff"
                android:fontFamily="sans-serif"
                android:textStyle="italic"
                android:layout_margin="10dp"/>


        </LinearLayout>

    </ScrollView>

</LinearLayout>
